--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,2 +1,2 @@
-- title: Als Unternehmen an der PhysiKon teilnehmen!
-  link: exhibitors.html
+- title: Als Unternehmen an der PhysiKon teilnehmen
+  link: exhibitors
