--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ description: > # this means to ignore newlines until "baseurl:"
   Jobmesse der Fakultät Physik der TU Dortmund
 baseurl: '' # the subpath of your site, e.g. /blog
 # the base hostname & protocol for your site
-url: https://127.0.01:4000
+url: https://physikon.pep-dortmund.org
 markdown: kramdown
 exclude:
   - "deploy_key"
